# dgp2019_exercise7

./: CMakeLists.txt  README.md
remeshing/: CMakeLists.txt  main.cpp  mesh_processing.cpp  mesh_processing.h  remesh_test.cpp  viewer.cpp  viewer.h
